RESOLVED FIXED99849
Web Inspector: paint rectangles are incorrectly shown in case subframes are present
https://bugs.webkit.org/show_bug.cgi?id=99849
Summary Web Inspector: paint rectangles are incorrectly shown in case subframes are p...
Andrey Kosyakov
Reported 2012-10-19 10:08:50 PDT
Visualization of paint rectangles works incorrectly for pages where subframes are present: we only store the context and rectangle from last willPaint and draw it in didPaint. For nested frames, paint calls are nested, so we will only paint innermost frame and reset the last paint context, so that didPaint()s of outer frames will bail out.
Attachments
Patch (14.25 KB, patch)
2012-10-19 10:14 PDT, Andrey Kosyakov
no flags
Patch (14.25 KB, patch)
2012-10-19 10:43 PDT, Andrey Kosyakov
no flags
Patch (14.33 KB, patch)
2012-10-22 01:25 PDT, Andrey Kosyakov
no flags
Patch (15.27 KB, patch)
2012-10-22 10:45 PDT, Andrey Kosyakov
pfeldman: review+
Andrey Kosyakov
Comment 1 2012-10-19 10:14:43 PDT
Peter Beverloo (cr-android ews)
Comment 2 2012-10-19 10:41:41 PDT
Comment on attachment 169642 [details] Patch Attachment 169642 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/14462520
Andrey Kosyakov
Comment 3 2012-10-19 10:43:58 PDT
Early Warning System Bot
Comment 4 2012-10-19 10:52:54 PDT
Build Bot
Comment 5 2012-10-19 11:08:41 PDT
WebKit Review Bot
Comment 6 2012-10-19 11:08:52 PDT
Comment on attachment 169647 [details] Patch Attachment 169647 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14460539
Build Bot
Comment 7 2012-10-19 11:16:09 PDT
Peter Beverloo (cr-android ews)
Comment 8 2012-10-19 11:20:40 PDT
Comment on attachment 169647 [details] Patch Attachment 169647 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/14462532
Gyuyoung Kim
Comment 9 2012-10-19 11:55:33 PDT
Early Warning System Bot
Comment 10 2012-10-19 15:17:36 PDT
Andrey Kosyakov
Comment 11 2012-10-22 01:25:26 PDT
Pavel Feldman
Comment 12 2012-10-22 06:58:51 PDT
Comment on attachment 169847 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169847&action=review > Source/WebCore/inspector/InspectorInstrumentation.h:145 > + static void didPaint(Frame*); Could you instead pass context and rect into the didPaint as well and move the paint rectangle there?
Andrey Kosyakov
Comment 13 2012-10-22 10:45:20 PDT
Andrey Kosyakov
Comment 14 2012-10-23 10:06:24 PDT
Note You need to log in before you can comment on or make changes to this bug.