Source/WebCore/inspector/TimelineRecordFactory.h
@@ -75,8 +75,6 @@ namespace WebCore {
 
         static PassRefPtr<InspectorObject> createResourceFinishData(const String& requestId, bool didFail, double finishTime);
 
-        static PassRefPtr<InspectorObject> createPaintData(const LayoutRect&);
-
         static void addRectData(InspectorObject*, const LayoutRect&);
 
         static PassRefPtr<InspectorObject> createDecodeImageData(const String& imageType);
